# linux-nasm

./: .gitignore  LICENSE  README.md  gmon.out
Compressing/: testexcell.xlsx
Compressing/unzip-source/: Makefile
Compressing/unzipdocx/: gmon.out  testdoc.docx  unzip  unzip.asm
Compressing/unzipped-xlsx/: [Content_Types].xml
Compressing/zip-source/: zip.asm
Examples/: readme.md
Examples/AVX/: readme.md
Examples/Conversion/: wordbin2bcd.asm
Examples/Database/: mysqldatabase.asm
Examples/IPC/: Makefile  extxterm.asm  pipedemo4.asm
Examples/Networking/: httpserver.asm  sslsocket
Examples/X11/: x11info.asm
Examples/autotools/: .gitignore  autogen.sh
Examples/autotools/X11/x11info/: Makefile  Makefile.am  Makefile.in  x11info.asm
Examples/autotools/X11/x11info/src/: Makefile.in
Examples/autotools/basics/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac
Examples/autotools/basics/arguments/: Makefile.in
Examples/autotools/basics/arguments/src/: Makefile.am  Makefile.in
Examples/autotools/basics/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Examples/autotools/basics/cpuid/: Makefile.am  Makefile.in  cpuid.asm
Examples/autotools/basics/cpuid/src/: Makefile.in
Examples/autotools/basics/cwd/: Makefile.am  Makefile.in  cwd
Examples/autotools/basics/cwd/src/: Makefile.in
Examples/autotools/basics/dealcards/: Makefile.in  dealcards
Examples/autotools/basics/dealcards/src/: Makefile.am  Makefile.in  dealcards.asm
Examples/autotools/basics/dirinfo/: Makefile.am  Makefile.in  dirinfo
Examples/autotools/basics/dirinfo/src/: Makefile.in
Examples/autotools/basics/hello/: Makefile.in  hello
Examples/autotools/basics/hello/src/: Makefile.am  Makefile.in
Examples/autotools/basics/inputdemo/: Makefile.am  Makefile.in
Examples/autotools/basics/inputdemo/src/: Makefile.in
Examples/autotools/basics/keyfilter/: Makefile.in
Examples/autotools/basics/keyfilter/src/: Makefile.am  Makefile.in
Examples/autotools/basics/palindrome/: Makefile.am  Makefile.in  palindrome
Examples/autotools/basics/palindrome/src/: Makefile.in
Examples/autotools/basics/printenv/: Makefile.in
Examples/autotools/basics/printenv/src/: Makefile.am  Makefile.in  printenv.asm
Examples/autotools/basics/readfile/: Makefile.am  Makefile.in  readfile
Examples/autotools/basics/readfile/src/: Makefile.in
Examples/autotools/ipc/notify/src/: Makefile.am  Makefile.in  notify.asm
Examples/autotools/network/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac
Examples/autotools/network/autom4te.cache/: output.0  requests  traces.0  traces.1
Examples/autotools/network/sslsocket/: Makefile  Makefile.am  Makefile.in
Examples/autotools/network/sslsocket/src/: Makefile.in  sslsocket.asm
Examples/basics/: Makefile  arguments.asm  cpuid.asm  cwd.asm  dealcards.asm  dirinfo.asm  hello.asm  inputdemo.asm  keyfilter.asm  palindrome.asm  printenv.asm  readfile.asm  rotatebits.asm  uuid.asm  waitforenterkeypress.asm  waitforkeypress.asm  winsize.asm
Examples/common-gateway-interface/: Makefile
Examples/conversion-routines/: nibblebin2bcd.asm  nibblebin2hexascii.asm
Examples/database/: mysqldatabase.asm  mysqlserverinfo.asm  mysqluuid.asm
Examples/interprocess-communication/: pipedemo1.asm  pipedemo3.asm  unzip.asm  zip.asm
Examples/libraries/: Makefile
Examples/networking/: sockettest.asm  sslsocket  sslsocket.inc
Examples/pseudo-random-generators/: MT19937-32.asm  congruentialrng.asm
Examples/qmake/: examples.pro
Examples/todos/GTK/2.0/10-CPUWidget/: Makefile.am  configure.ac
Include-Files/: README.md  stdio.inc  unistd32.inc  unistd64.inc
Include-Files/asm-generic/: errno-base.inc  errno.inc  socket.inc  sockios.inc
Include-Files/bits/: in.inc  socket_type.inc
Include-Files/cpu/: cpu.inc
Include-Files/gtk/: g.inc  gtk.inc
Include-Files/sys/: dirent.inc  fcntl.inc  ioctls.inc  ipc.inc  mman.inc  page.inc  sched.inc  sem.inc  shm.inc  socket.inc  sockios.inc  stat.inc  termios.inc  time.inc  wait.inc
Includes/: obsolete_syscalls.inc  unistd32.inc  unistd64.inc
Python/: Makefile  functions.py  libpyfunctions.asm  libpyfunctions.so.1.0  libpyfunctions.so.1.0.0  main.py  pyfunctions.asm
QT57/: README
Snippets/: dwordbin2hexascii.asm
SourceCode/: readme.md
Support/: README.md
Support/Examples/Builds/automake/gtk3_window/: Makefile.am
Webservices/: Makefile  allaccountsextended.xml  definitions.xml
basics/waitforenterkeypress/: Makefile.am  configure.ac  waitforenterkeypress.asm
done/Support/Automake/templates/glib2.0/: Makefile.am
done/Support/Automake/templates/gtk3.0/: Makefile.am  configure.ac
examples/: .directory
includes/: ReadMe.txt  errors.inc  fcntl.inc  netdb.inc  signals.inc  stdio.inc  unistd.inc  unistd32.inc  unistd64.inc
install/automake/example/: Makefile.am  configure.ac  hello.asm  print.asm
mmapdemo/: Makefile
nasmx-1.4/: LICENSE.TXT  setpaths.bat
python-binding/: functions.py  libpyfunctions.asm
set-up-dev-env/: edb.html  readme.txt  smartgit.html  syntax-highlighter-kate.html  using-qt.html
setup/: .profile
source-code/basics/hello/: Makefile.am  makefile
source/gtk/glib2.0/03-list/: Makefile.am  configure.ac  list.asm
source/gtk/glib2.0/04-tree/: Makefile.am  configure.ac  tree.asm
source/todos/gtk/: Makefile.am  configure.ac  simple.asm
source/todos/gtk/autom4te.cache/: requests  traces.1
support/: README.md
support/Examples/automake/hello/: Makefile.am  print.asm
syntax/: syntax.xml
to.revised/: 8086tiny_bios_source_bios.asm.html  tiny8086_8086tiny_8086tiny.c.html
to.revised/gtk/glib2.0/02-hash/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  hash.asm
to.revised/gtk/glib2.0/02-hash/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
to.revised/gtk/gtk3.0/99-agguro-dialog/: Makefile.am  Makefile.in
to.revised/gtk/gtk3.0/99-agguro-dialog/autom4te.cache/: output.1
todos/: readme_if_you_like.txt
unzip/: unzip.asm
(+6456 files in other folders)
