AC_PREREQ([2.69])
AC_INIT([linuxnasm-basics],[1.0.0],[aggurobe@gmail.com],[agguro],[https://linuxnasm.be])

AX_PROG_NASM([nasm_avail="no"])

AM_INIT_AUTOMAKE()

AC_OUTPUT([Makefile \
arguments/src/Makefile \
cpuid/src/Makefile \
cwd/src/Makefile \
dealcards/src/Makefile \
dirinfo/src/Makefile \
hello/src/Makefile  \
inputdemo/src/Makefile  \
keyfilter/src/Makefile  \
palindrome/src/Makefile  \
printenv/src/Makefile  \
readfile/src/Makefile 
])
