AC_PREREQ([2.69])
AC_INIT([linuxnasm-basics],[1.0.0],[aggurobe@gmail.com],[agguro],[https://linuxnasm.be])

AX_PROG_NASM([nasm_avail="no"])

AM_INIT_AUTOMAKE()

AC_OUTPUT([Makefile \
arguments/Makefile \
cpuid/Makefile \
cwd/Makefile \
dealcards/Makefile \
dirinfo/Makefile \
hello/Makefile  \
inputdemo/Makefile  \
keyfilter/Makefile  \
palindrome/Makefile  \
printenv/Makefile  \
readfile/Makefile 
])
